tests/calico_testcases/example_policies/testcase12-interference/testcase12-open-kube-system.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: kube-system
spec:
  order: 4
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
    destination:
      selector: all()
